[package]
name = "rust_todo"
version = "0.1.0"
edition = "2024"                  
authors = ["Vivek Manojkumar Nair"] 
description = "A simple To-Do List CLI application written in Rust."
license = "MIT"                     
readme = "README.md"                
repository = "https://github.com/Vivek0306/todo_rust" 
homepage = "https://github.com/Vivek0306/todo_rust"
keywords = ["cli", "todo", "task", "rust"]
categories = ["command-line-utilities"]

[dependencies]
colored = "2.0"